@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id "me.champeau.jmh" version "0.6.4"
+    id "me.champeau.jmh" version "0.7.3"
 }
 
 group 'me.steinborn'
@@ -20,6 +20,19 @@ dependencies {
     implementation "io.netty:netty-buffer:4.1.58.Final"
 }
 
+compileJmhJava {
+    options.compilerArgs += [
+            '--add-modules', 'jdk.incubator.vector'
+    ]
+}
+jmhRunBytecodeGenerator {
+    jvmArgs.add('--add-modules=jdk.incubator.vector')
+}
+
+processJmhResources {
+    duplicatesStrategy(DuplicatesStrategy.WARN)
+}
+
 jmh {
     // The full list of configuration options can be found here:
     // https://github.com/melix/jmh-gradle-plugin
@@ -29,4 +42,7 @@ jmh {
 
     // Uncomment to collect GC metrics
     // profilers = ['gc']
+    jvmArgsAppend = [
+            '--add-modules=jdk.incubator.vector -XX:CompileCommand=print,me/steinborn/varintshowdown/res/BlendedVarIntWriter.write -XX:CompileCommand=print,me/steinborn/varintshowdown/res/Lucky5VarIntWriter.write -XX:CompileCommand=print,me/steinborn/varintshowdown/res/Lucky5VarIntWriter.v -XX:CompileCommand=print,me/steinborn/varintshowdown/res/Lucky5VarIntWriter.l'
+    ]
 }
